<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainacitivy_a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_main_tab_01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_tab_01"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/selector_ic_main_tab_one"
                android:tag="(43,43)" />

            <TextView
                android:id="@+id/tv_main_tab_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(22){0,4,0,0}"
                android:text="@string/main_tab_first"
                android:textColor="@drawable/selector_color_main_tab_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_tab_02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_tab_02"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/selector_ic_main_tab_two"
                android:tag="(43,43)" />

            <TextView
                android:id="@+id/tv_main_tab_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(22){0,4,0,0}"
                android:text="@string/main_tab_two"
                android:textColor="@drawable/selector_color_main_tab_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_tab_03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_tab_03"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/selector_ic_main_tab_three"
                android:tag="(43,43)" />

            <TextView
                android:id="@+id/tv_main_tab_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(22){0,4,0,0}"
                android:text="@string/main_tab_three"
                android:textColor="@drawable/selector_color_main_tab_text" />
        </LinearLayout>

      <!--  <LinearLayout
            android:id="@+id/ll_main_tab_04"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_tab_04"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/selector_ic_main_tab_four"
                android:tag="(43,43)" />

            <TextView
                android:id="@+id/tv_main_tab_04"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:text="@string/main_tab_four"
                android:textColor="@drawable/selector_color_main_tab_text" />

        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/ll_main_tab_04"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_tab_04"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/selector_ic_main_tab_three"
                android:tag="(43,43)" />

            <TextView
                android:id="@+id/tv_main_tab_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(22){0,4,0,0}"
                android:text="@string/main_tab_four"
                android:textColor="@drawable/selector_color_main_tab_text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_main_tab_05"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_main_tab_05"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:src="@drawable/selector_ic_main_tab_five"
                android:tag="(43,43)" />

            <TextView
                android:id="@+id/tv_main_tab_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(22){0,4,0,0}"
                android:text="@string/main_tab_five"
                android:textColor="@drawable/selector_color_main_tab_text" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
